# StudentAppBot

./: Dockerfile  pyproject.toml
src/: bot.py  bot_instance.py  config.py  fallback.py
src/core/: base_api.py
src/feedback/: api.py  handler.py  keyboard.py  utils.py
src/handlers/: fallback.py  feedback.py  find_teacher.py  group_lead.py  main_menu.py  profile.py  schedule.py  user_settings.py
src/info/: handler.py
src/keyboards/: feedback.py  find_teacher.py  group_lead.py  main_menu.py  profile.py  schedule.py  user_settings.py
src/main_menu/: handler.py  keyboard.py
src/middlewares/: message_logging.py  permissions_check.py
src/schedule/: api.py  consts.py  handler.py  keyboard.py  utils.py
src/student/: api.py  handler.py  keyboard.py  utils.py
src/teacher/: api.py  handler.py  keyboard.py
src/utils/: message_generators.py
src/utils/api/: base.py  feedback.py  group.py  schedule.py  user.py
